--- a/src/css/main.css
+++ b/src/css/main.css
@@ -118,6 +118,7 @@ h2{
     margin-bottom: 2rem;
     width: 100px;
     height: 50px;
+    cursor: pointer;
 
     background-color: lightblue;
     font-size: 1rem;
